--- a/PROGRAM/app/src/main/AndroidManifest.xml
+++ b/PROGRAM/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.SeaCare"
         tools:targetApi="31">
         <activity
+            android:name=".DetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".DetaileddActivity"
             android:exported="false" />
         <activity
