--- a/PROGRAM/app/src/main/AndroidManifest.xml
+++ b/PROGRAM/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SeaCare"
         tools:targetApi="31">
         <activity
+            android:name=".btn_info2"
+            android:exported="false" />
+        <activity
+            android:name=".BtnInfoFragment"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
